Image overflow bug fixed

--- a/src/sections/About/about.module.scss
+++ b/src/sections/About/about.module.scss
@@ -47,6 +47,7 @@
 
 			@include respond(phone-large) {
 				max-height: 30rem;
+				width: 100%;
 			}
 		}
 
